# zju-ddl-killer

./: README.md
ZJU-DDL-Scraper/: README.md  pyproject.toml  requirements.txt  zju-ddl.sh
ZJU-DDL-Scraper/zju_ddl_scraper/: __init__.py  cli.py  models.py  pta.py  reminders.py  zju.py
