[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zju-ddl-scraper"
version = "1.0.0"
description = "ZJU DDL 统一爬虫 - 学在浙大 + PTA"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "playwright>=1.40.0",
]

[project.scripts]
zju-ddl = "zju_ddl_scraper.cli:main"

[tool.setuptools.packages.find]
include = ["zju_ddl_scraper*"]
